--- a/client/views/settings/index.html
+++ b/client/views/settings/index.html
@@ -25,7 +25,7 @@
         ng-include="'settings/website-management/tenant-list.html'">
     </section>
 
-    <section  class="sd-page__main-content sd-page__main-content--double-left-nav"
+    <section  class="sd-page__main-content sd-page__main-content--double-left-nav relative"
         ng-if="webPublisherSettings.activePanel === 'tenant' && webPublisherSettings.openSiteEdit"
         ng-include="'settings/website-management/manage.html'"></section>
 
