--- a/client/views/settings/website-management/manage-general.html
+++ b/client/views/settings/website-management/manage-general.html
@@ -20,7 +20,11 @@
         </div>
         <div class="form__row">
             <span ng-model="newSite.amp_enabled" sd-switch=""></span><label>Enable AMP</label>
+        </div>
+        <div class="form__row">
             <span ng-model="newSite.fbia_enabled" sd-switch=""></span><label>Enable FBIA</label>
+        </div>
+        <div class="form__row">
             <span ng-model="newSite.paywall_enabled" sd-switch=""></span><label>Enable Paywall</label>
         </div>
         <div ng-if="newSite.output_channel">
