--- a/client/views/settings/website-management/manage-nav.html
+++ b/client/views/settings/website-management/manage-nav.html
@@ -3,7 +3,7 @@
 </div>
 <nav class="sd-content-nav">
     <ul>
-        <li ng-repeat="site in sites | orderBy: 'name'">
+        <li ng-repeat="site in sites | orderBy: 'name'" ng-click="webPublisherSettings.cancelEditSite()">
             <a href="" ng-click="webPublisherSettings.editSite(site)"
                 class="sd-content-nav__btn"
                 ng-class="{'sd-content-nav__btn--active': site.code === webPublisherSettings.selectedSite.code}">
@@ -12,8 +12,3 @@
         </li>
     </ul>
 </nav>
-<div class="sp-manage-overlay"
-    ng-if="webPublisherSettings.activePanel === 'tenant'
-        && webPublisherSettings.openSiteEdit
-        && (webPublisherSettings.siteForm.$dirty || webPublisherSettings.themeSettingsForm.$dirty)">
-</div>
