--- a/client/views/content-lists/index.html
+++ b/client/views/content-lists/index.html
@@ -11,7 +11,10 @@
       class="sd-sidebar-menu sd-sidebar-menu--second-level sd-page-content__left-tabs"
       ng-include="'sidebar-content.html'"
     ></div>
-    <div id="sp-content-lists-react-app" class="sd-page-content__content-block sp-bottomBarMargin"></div>
+    <div
+      id="sp-content-lists-react-app"
+      class="sd-page-content__content-block sp-bottomBarMargin"
+    ></div>
     <footer classname="bottom-bar "></footer>
   </section>
   <footer className="bottom-bar " />
