--- a/client/components/UI/Slideshow/slideshow.css
+++ b/client/components/UI/Slideshow/slideshow.css
@@ -1,6 +1,6 @@
-.aws-sld__box,
-.aws-sld__container figure,
-.aws-sld__content {
+.awssld__box,
+.awssld__container figure,
+.awssld__content {
   display: block;
   position: absolute;
   width: 100%;
@@ -8,15 +8,13 @@
   top: 0;
   left: 0;
 }
-
-.aws-sld__bullets button,
-.aws-sld__controls button {
+.awssld__bullets button,
+.awssld__controls button {
   outline-color: 0;
   outline-style: none;
   outline-width: 0;
 }
-
-.aws-sld {
+.awssld {
   --organic-arrow-thickness: 4px;
   --organic-arrow-height: 20px;
   --slider-height-percentage: 60%;
@@ -24,51 +22,45 @@
   --loader-bar-height: 4px;
   --control-button-width: 10%;
   --control-button-height: 25%;
-  --control-button-opacity: 0.5;
-  --control-button-hover-opacity: 0.75;
+  --control-button-opacity: 0.8;
+  --control-button-hover-opacity: 1;
   --control-button-background: transparent;
   --transition-bezier: cubic-bezier(0.5, 0.075, 0.25, 0.95);
-  --slider-transition-duration: 200ms;
-  --organic-arrow-color: #747c87;
+  --slider-transition-duration: 575ms;
+  --organic-arrow-color: #000;
   --organic-arrow-border-radius: 0;
   --control-bullet-color: #747c87;
   --control-bullet-active-color: #5ea9c8;
   --content-background-color: #2f2f2f;
   max-width: 100%;
 }
-
-.aws-sld,
-.aws-sld__wrapper {
+.awssld,
+.awssld__wrapper {
   display: block;
   position: relative;
   width: 100%;
 }
-
-.aws-sld__wrapper {
+.awssld__wrapper {
   overflow: hidden;
   height: 100%;
 }
-
-.aws-sld__container {
+.awssld__container {
   display: block;
   width: 100%;
   height: 0;
   padding-bottom: var(--slider-height-percentage);
 }
-
 @media (max-width: 500px) {
-  .aws-sld__container {
+  .awssld__container {
     padding-bottom: calc(var(--slider-height-percentage) * 1.25);
   }
 }
-
-.aws-sld__startUp {
-  background-color: var(--control-bullet-active-color);
+.awssld__startUp {
+  background-color: red;
   height: 100%;
   width: 100%;
 }
-
-.aws-sld__startUp > div {
+.awssld__startUp > div {
   height: 100%;
   width: 100%;
   display: -webkit-box;
@@ -81,13 +73,11 @@
   -ms-flex-pack: center;
   justify-content: center;
 }
-
-.aws-sld__startUp img {
+.awssld__startUp img {
   width: 35%;
   height: auto;
 }
-
-.aws-sld__content {
+.awssld__content {
   background-color: var(--content-background-color);
   overflow: hidden;
   display: -webkit-box;
@@ -100,9 +90,8 @@
   -ms-flex-pack: center;
   justify-content: center;
 }
-
-.aws-sld__content > img,
-.aws-sld__content > video {
+.awssld__content > img,
+.awssld__content > video {
   -o-object-fit: cover;
   object-fit: cover;
   width: 100%;
@@ -111,8 +100,7 @@
   top: 0;
   left: 0;
 }
-
-.aws-sld__controls button {
+.awssld__controls button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -126,38 +114,37 @@
   height: var(--control-button-height);
   position: absolute;
   z-index: 10;
-  top: calc(50% - (0.5 * var(--control-button-height)));
+  top: calc(50% - 0.5 * var(--control-button-height));
   border: none;
-  background-color: var(--control-button-background);
-  color: #fff;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 4px;
+  color: #000;
   cursor: pointer;
 }
-
-.aws-sld__controls button .aws-sld__controls__arrow-left,
-.aws-sld__controls button .aws-sld__controls__arrow-right {
+.awssld__controls button .awssld__controls__arrow-left,
+.awssld__controls button .awssld__controls__arrow-right {
   opacity: var(--control-button-opacity);
 }
-
-.aws-sld__controls button:hover .aws-sld__controls__arrow-left,
-.aws-sld__controls button:hover .aws-sld__controls__arrow-right {
+.awssld__controls button:hover .awssld__controls__arrow-left,
+.awssld__controls button:hover .awssld__controls__arrow-right {
   opacity: var(--control-button-opacity-hover);
 }
-
-.aws-sld__controls--active .aws-sld__controls__arrow-left {
+.awssld__controls--active .awssld__controls__arrow-left {
   opacity: var(--control-button-opacity-hover);
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
 }
-
-.aws-sld__controls--active .aws-sld__controls__arrow-right {
+.awssld__controls--active .awssld__controls__arrow-right {
   opacity: var(--control-button-opacity-hover);
+  -webkit-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
 }
-
 @media (max-width: 520px) {
-  .aws-sld__controls {
+  .awssld__controls {
     visibility: hidden;
   }
 }
-
-.aws-sld__bar {
+.awssld__bar {
   display: block;
   width: 100%;
   height: var(--loader-bar-height);
@@ -173,45 +160,31 @@
   -webkit-transform: translate3d(-100%, 0, 0);
   transform: translate3d(-100%, 0, 0);
 }
-
-.aws-sld__bar--active {
+.awssld__bar--active {
   -webkit-transform: translate3d(-20%, 0, 0);
   transform: translate3d(-20%, 0, 0);
 }
-
-.aws-sld__bar--end {
+.awssld__bar--end {
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
 }
-
-.aws-sld__next {
+.awssld__next {
   right: 0;
 }
-
-.aws-sld__prev {
+.awssld__prev {
   left: 0;
 }
-
-.aws-sld__box {
+.awssld__box {
   z-index: 1;
+  visibility: hidden;
 }
-
-.aws-sld--animated {
+.awssld--animated {
   will-change: transform;
-  -webkit-transition: -webkit-transform var(--slider-transition-duration)
-    var(--transition-bezier);
-  transition: -webkit-transform var(--slider-transition-duration)
-    var(--transition-bezier);
-  transition: transform var(--slider-transition-duration)
-    var(--transition-bezier);
-  transition: transform var(--slider-transition-duration)
-      var(--transition-bezier),
-    -webkit-transform var(--slider-transition-duration) var(--transition-bezier);
+  visibility: visible;
 }
-
-.aws-sld--animated-mobile {
+.awssld--animated-mobile {
   will-change: transform;
   -webkit-transition: -webkit-transform 325ms cubic-bezier(0.15, 0.65, 0.1, 1);
   transition: -webkit-transform 325ms cubic-bezier(0.15, 0.65, 0.1, 1);
@@ -219,46 +192,60 @@
   transition: transform 325ms cubic-bezier(0.15, 0.65, 0.1, 1),
     -webkit-transform 325ms cubic-bezier(0.15, 0.65, 0.1, 1);
 }
-
-.aws-sld--active {
+.awssld--active {
+  visibility: visible;
   z-index: 2;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
 }
-
-.aws-sld--moveRight {
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
+.awssld--moveLeft,
+.awssld--moveRight {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
-
-.aws-sld--moveLeft {
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
+.awssld--moveRight {
+  -webkit-animation: slideFromRight var(--slider-transition-duration) both
+    var(--transition-bezier);
+  animation: slideFromRight var(--slider-transition-duration) both
+    var(--transition-bezier);
 }
-
-.aws-sld--exit {
+.awssld--moveLeft {
+  -webkit-animation: slideFromLeft var(--slider-transition-duration) both
+    var(--transition-bezier);
+  animation: slideFromLeft var(--slider-transition-duration) both
+    var(--transition-bezier);
+}
+.awssld--exit {
   z-index: 0;
 }
-
-.aws-sld--first .aws-sld__prev,
-.aws-sld--last .aws-sld__next {
+.awssld--exit.awssld--moveLeft {
+  -webkit-animation: slideToLeft var(--slider-transition-duration) both
+    var(--transition-bezier);
+  animation: slideToLeft var(--slider-transition-duration) both
+    var(--transition-bezier);
+}
+.awssld--exit.awssld--moveRight {
+  -webkit-animation: slideToRight var(--slider-transition-duration) both
+    var(--transition-bezier);
+  animation: slideToRight var(--slider-transition-duration) both
+    var(--transition-bezier);
+}
+.awssld--first .awssld__prev,
+.awssld--last .awssld__next {
   visibility: hidden;
 }
-
-.aws-sld--fill-parent {
+.awssld--fill-parent {
   position: absolute !important;
   width: 100% !important;
   height: 100% !important;
   top: 0;
   left: 0;
 }
-
-.aws-sld--fill-parent .aws-sld__container {
+.awssld--fill-parent .awssld__container {
   height: 100%;
   padding: 0;
 }
-
-.aws-sld__bullets {
+.awssld__bullets {
   position: absolute;
   bottom: -20px;
   width: 100%;
@@ -272,8 +259,7 @@
   -ms-flex-pack: center;
   justify-content: center;
 }
-
-.aws-sld__bullets button {
+.awssld__bullets button {
   padding: 0;
   display: block;
   width: 6px;
@@ -295,13 +281,21 @@
     background-color 0.175s ease-out,
     -webkit-transform 0.225s cubic-bezier(0.8, 1.35, 0.75, 1.45);
 }
-
-.aws-sld__bullets .aws-sld__bullets--active {
+.awssld__bullets .awssld__bullets--loading,
+.awssld__bullets button:hover {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+.awssld__bullets .awssld__bullets--active {
   background: var(--control-bullet-active-color);
 }
-
-.aws-sld__controls__arrow-left,
-.aws-sld__controls__arrow-right {
+.awssld__bullets .awssld__bullets--active,
+.awssld__bullets .awssld__bullets--active:hover {
+  -webkit-transform: scale(1.5);
+  transform: scale(1.5);
+}
+.awssld__controls__arrow-left,
+.awssld__controls__arrow-right {
   width: 100%;
   height: var(--organic-arrow-height);
   position: relative;
@@ -313,17 +307,15 @@
   transition: transform 0.2s ease-out 0.125s, opacity 0.2s ease-out,
     -webkit-transform 0.2s ease-out 0.125s;
 }
-
-.aws-sld__controls__arrow-left:after,
-.aws-sld__controls__arrow-left:before,
-.aws-sld__controls__arrow-right:after,
-.aws-sld__controls__arrow-right:before {
+.awssld__controls__arrow-left:after,
+.awssld__controls__arrow-left:before,
+.awssld__controls__arrow-right:after,
+.awssld__controls__arrow-right:before {
   content: " ";
   position: absolute;
   right: calc(
-    50% -
-      (0.7071 * (var(--organic-arrow-height) + var(--organic-arrow-thickness))) /
-      2
+    50% - 0.7071 *
+      (var(--organic-arrow-height) + var(--organic-arrow-thickness)) / 2
   );
   height: 100%;
   border-radius: var(--organic-arrow-border-radius);
@@ -336,66 +328,209 @@
   transition: transform 0.15s ease-out, background-color 0.15s ease-out,
     -webkit-transform 0.15s ease-out;
 }
-
-.aws-sld__controls__arrow-left:before,
-.aws-sld__controls__arrow-right:before {
+.awssld__controls__arrow-left:before,
+.awssld__controls__arrow-right:before {
   -webkit-transform-origin: 100% 100% 0;
   transform-origin: 100% 100% 0;
   top: -50%;
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
-
-.aws-sld__controls__arrow-left:after,
-.aws-sld__controls__arrow-right:after {
+.awssld__controls__arrow-left:after,
+.awssld__controls__arrow-right:after {
   -webkit-transform-origin: 100% 0 0;
   transform-origin: 100% 0 0;
   top: 50%;
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
 }
-
-.aws-sld__controls__arrow-left:after,
-.aws-sld__controls__arrow-left:before {
+.awssld__controls__arrow-right--active {
+  -webkit-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
+}
+.awssld__controls__arrow-right--active:after {
+  -webkit-transform: rotate(90deg) translate3d(50%, 0, 0) !important;
+  transform: rotate(90deg) translate3d(50%, 0, 0) !important;
+}
+.awssld__controls__arrow-right--active:before {
+  -webkit-transform: rotate(-90deg) translate3d(50%, 0, 0) !important;
+  transform: rotate(-90deg) translate3d(50%, 0, 0) !important;
+}
+.awssld__controls__arrow-left:after,
+.awssld__controls__arrow-left:before {
   right: auto;
   left: calc(
-    50% -
-      (0.7071 * (var(--organic-arrow-height) + var(--organic-arrow-thickness))) /
-      2
+    50% - 0.7071 *
+      (var(--organic-arrow-height) + var(--organic-arrow-thickness)) / 2
   );
 }
-
-.aws-sld__controls__arrow-left:before {
+.awssld__controls__arrow-left:before {
   -webkit-transform-origin: 0 100% 0;
   transform-origin: 0 100% 0;
   top: -50%;
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
 }
-
-.aws-sld__controls__arrow-left:after {
+.awssld__controls__arrow-left:after {
   -webkit-transform-origin: 0 0 0;
   transform-origin: 0 0 0;
   top: 50%;
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
-
-.aws-sld__controls button:hover .aws-sld__controls__arrow-left:before {
+.awssld__controls__arrow-left--active {
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+}
+.awssld__controls__arrow-left--active:after {
+  -webkit-transform: rotate(-90deg) translate3d(-50%, 0, 0) !important;
+  transform: rotate(-90deg) translate3d(-50%, 0, 0) !important;
+}
+.awssld__controls__arrow-left--active:before {
+  -webkit-transform: rotate(90deg) translate3d(-50%, 0, 0) !important;
+  transform: rotate(90deg) translate3d(-50%, 0, 0) !important;
+}
+.awssld__controls button:hover .awssld__controls__arrow-left:before {
   opacity: 1;
   -webkit-transform: rotate(30deg);
   transform: rotate(30deg);
 }
-
-.aws-sld__controls button:hover .aws-sld__controls__arrow-left:after,
-.aws-sld__controls button:hover .aws-sld__controls__arrow-right:before {
+.awssld__controls button:hover .awssld__controls__arrow-left:after,
+.awssld__controls button:hover .awssld__controls__arrow-right:before {
   opacity: 1;
   -webkit-transform: rotate(-30deg);
   transform: rotate(-30deg);
 }
-
-.aws-sld__controls button:hover .aws-sld__controls__arrow-right:after {
+.awssld__controls button:hover .awssld__controls__arrow-right:after {
   opacity: 1;
   -webkit-transform: rotate(30deg);
   transform: rotate(30deg);
+}
+.awssld__timer {
+  --timer-delay: 2000ms;
+  --timer-release: 200ms;
+  --timer-height: 4px;
+  --timer-background-color: rgba(0, 0, 0, 0.15);
+  width: 100%;
+  height: var(--timer-height);
+  background-color: var(--timer-background-color);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  -webkit-transform: translateX(-100%);
+  transform: translateX(-100%);
+}
+.awssld__timer--animated {
+  will-change: transform;
+  -webkit-transition: -webkit-transform var(--timer-delay) linear;
+  transition: -webkit-transform var(--timer-delay) linear;
+  transition: transform var(--timer-delay) linear;
+  transition: transform var(--timer-delay) linear,
+    -webkit-transform var(--timer-delay) linear;
+}
+.awssld__timer--run {
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+}
+.awssld__timer--fast {
+  -webkit-transition: -webkit-transform calc(var(--timer-release) / 2) linear;
+  transition: -webkit-transform calc(var(--timer-release) / 2) linear;
+  transition: transform calc(var(--timer-release) / 2) linear;
+  transition: transform calc(var(--timer-release) / 2) linear,
+    -webkit-transform calc(var(--timer-release) / 2) linear;
+  -webkit-transform: translateX(-0.00001px);
+  transform: translateX(-0.00001px);
+}
+.awssld__timer--end {
+  -webkit-transform: translateX(-0.0001px);
+  transform: translateX(-0.0001px);
+  -webkit-transition: -webkit-transform var(--timer-release) linear;
+  transition: -webkit-transform var(--timer-release) linear;
+  transition: transform var(--timer-release) linear;
+  transition: transform var(--timer-release) linear,
+    -webkit-transform var(--timer-release) linear;
+}
+.awssld__timer--hidden {
+  display: none;
+}
+@-webkit-keyframes slideFromLeft {
+  0% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+  to {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+}
+@keyframes slideFromLeft {
+  0% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+  to {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+}
+@-webkit-keyframes slideFromRight {
+  0% {
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+  }
+  to {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+}
+@keyframes slideFromRight {
+  0% {
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+  }
+  to {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+}
+@-webkit-keyframes slideToLeft {
+  0% {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+  to {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+@keyframes slideToLeft {
+  0% {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+  to {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+@-webkit-keyframes slideToRight {
+  0% {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+  to {
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+  }
+}
+@keyframes slideToRight {
+  0% {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+  }
+  to {
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+  }
 }
