--- a/client/views/settings/rules/index.html
+++ b/client/views/settings/rules/index.html
@@ -4,13 +4,13 @@
         <h2 class="sd-page__page-heading" translate="">Publishing Rules</h2>
     </div>
     <div class="sd-page__header">
-        <div ng-init="listType = 'all'">
+        <div ng-init="listType = 'all'" class="sd-margin-r--5">
             <sd-check ng-model="listType" type="radio" ng-value="all" label-position="inside" ng-click="webPublisherSettings.selectedTenant=false">All</sd-check>
             <sd-check ng-model="listType" type="radio" ng-value="organization" label-position="inside">Organization Rules</sd-check>
             <sd-check ng-model="listType" type="radio" ng-value="tenant" label-position="inside">Tenant Rules</sd-check>
         </div>
-        <span class="sd-page__element-grow"></span>
-        <div class="dropdown dropdown--align-right" dropdown="">
+        <sd-search-handler ng-model="" data-debounce="200" data-button="true" data-label="Search" data-borderleft="true"></sd-search-handler>       
+        <div class="dropdown sd-margin-l--auto" dropdown="">
             <button class="btn btn--primary ng-binding" dropdown__toggle="">
                 <i class="icon-plus-sign icon--white"></i>Add New
             </button>
