--- a/client/views/settings/website-management/tenant-list.html
+++ b/client/views/settings/website-management/tenant-list.html
@@ -1,6 +1,7 @@
-<div class="sd-page__header sd-page__header--white sd-page__header--justify-space-between">
-    <h2 class="sd-page__page-heading">Website Management</h2>
-    <div class="dropdown dropdown--align-right" dropdown="">
+<div class="sd-page__header sd-page__header--white">
+    <h2 class="sd-page__page-heading sd-margin-r--5">Website Management</h2>
+    <sd-search-handler ng-model="" data-debounce="200" data-button="true" data-label="Search" data-borderleft="true"></sd-search-handler>
+    <div class="dropdown sd-margin-l--auto" dropdown="">
         <button class="btn btn--primary ng-binding" dropdown__toggle="">
             <i class="icon-plus-sign icon--white"></i>Add New
         </button>
