Management view UI improvements
- removing drodown from menu item (saving click)
- fix route view height
- fix back button spacing

--- a/client/views/settings/website-management/manage-navigation-menu.html
+++ b/client/views/settings/website-management/manage-navigation-menu.html
@@ -1,5 +1,5 @@
 <div class="sd-page__header">
-    <button class="backlink" ng-click="webPublisherSettings.changeManageTab('navigation')"></button>
+    <button class="backlink sd-margin-r--2" ng-click="webPublisherSettings.changeManageTab('navigation')"></button>
     <h2 class="sd-page__page-heading">{{menu.name}}</h2>
     <span class="sd-page__element-grow"></span>
     <a href="" ng-click="webPublisherSettings.toogleCreateMenu(true)"
