--- a/client/views/settings/website-management/manage.html
+++ b/client/views/settings/website-management/manage.html
@@ -74,7 +74,7 @@
             <div ng-if="webPublisherSettings.manageTab === 'navigation'" class="nav-tabs__pane sd-display-flex-column"
                 ng-include="'settings/website-management/manage-navigation.html'">
             </div>
-            <div ng-if="webPublisherSettings.manageTab === 'navigation-menu'" class="nav-tabs__pane sd-display-flex-column"
+            <div ng-if="webPublisherSettings.manageTab === 'navigation-menu'" class="nav-tabs__pane sd-display-flex-column sd-flex-grow"
                 ng-include="'settings/website-management/manage-navigation-menu.html'">
             </div>
             <div ng-if="webPublisherSettings.manageTab === 'webhooks'" class="nav-tabs__pane sd-display-flex-column flexGrow"
