--- a/client/views/settings/rules/index.html
+++ b/client/views/settings/rules/index.html
@@ -97,7 +97,7 @@
         </nav>
       </div>
       <div
-        class="sd-column-box__main-column sd-page__content padding--bottomBig"
+        class="sd-column-box__main-column sd-page__content sd-padding-t--0 sd-padding-b--5"
       >
         <div
           class="panel-info"
