--- a/client/views/settings/website-management/manage-theme-settings.html
+++ b/client/views/settings/website-management/manage-theme-settings.html
@@ -95,7 +95,7 @@
                             </div>
 
                             <div ng-switch-default>
-                                <div class="sd-line-input sd-margin-t--1" ng-class="{'sd-line-input--is-select': setting.options}">
+                                <div class="sd-line-input sd-margin-t--1 sd-d-flex" ng-class="{'sd-line-input--is-select': setting.options}">
                                     <label class="sd-line-input__label">{{setting.label}}</label>
                                     <input class="sd-line-input__input" type="text"
                                         ng-if="!setting.options"
