--- a/client/views/settings/website-management/manage-navigation-menu.html
+++ b/client/views/settings/website-management/manage-navigation-menu.html
@@ -10,7 +10,7 @@
     <div class="sd-column-box--3">
         <div class="sd-column-box__main-column">
             <ul class="treeList sd-list-item-group" dnd-list dnd-drop="webPublisherSettings.reorderMenu(menu, item, index)">
-                <li ng-repeat="data in menu.children | orderBy: 'position'" ng-include="'settings/website-management/partials/navigation-tree-renderer.html'"></li>
+                <li class="draggable" ng-repeat="data in menu.children | orderBy: 'position'" ng-include="'settings/website-management/partials/navigation-tree-renderer.html'"></li>
             </ul>
         </div>
 
