Website Management - collapsible tenant navigation

--- a/client/views/settings/website-management/manage-nav.html
+++ b/client/views/settings/website-management/manage-nav.html
@@ -1,5 +1,6 @@
 <div class="subnav subnav--padded subnav--lower-z-index">
     <h3 class="sd-content-nav-title sd-content-nav-title--uppercase">Website</h3>
+    <a class="icn-btn ml-auto" ng-click="$parent.$parent.sideNavOpen=false"><i class="icon-close-small"></i></a>
 </div>
 <nav class="sd-content-nav">
     <ul>
