UI notification for manual content list when limit is exceeded

--- a/client/styles/_publisher.scss
+++ b/client/styles/_publisher.scss
@@ -45,3 +45,10 @@
 .modal--kindafullscreen .modal__content .modal__body {
   max-width: 100%;
 }
+
+.listLimitNotification {
+  padding: 5px;
+  text-align: center;
+  border-top: 2px dashed red;
+  color: red;
+}
