--- a/client/styles/helperElements.scss
+++ b/client/styles/helperElements.scss
@@ -34,6 +34,10 @@
   }
 }
 
+.leftSpace {
+  margin-left: 0.25em;
+}
+
 .margin {
   &--none {
     margin: 0 !important;
@@ -276,7 +280,7 @@ select[disabled] > option {
   background-color: #f2f2f2;
   border-radius: 3px;
   line-height: 140%;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 .authoring {
   .ui-responsive-medium {
